// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example/Button Large smoke-test 1`] = `
<button type="button"
        class="storybook-button storybook-button--large storybook-button--secondary"
        style
>
  Button
</button>
`;

exports[`Example/Button Primary play-test 1`] = `
<button type="button"
        class="storybook-button storybook-button--medium storybook-button--primary"
        style
        disabled
>
  Button
</button>
`;

exports[`Example/Button Secondary smoke-test 1`] = `
<button type="button"
        class="storybook-button storybook-button--medium storybook-button--secondary"
        style
>
  Button
</button>
`;

exports[`Example/Button Small smoke-test 1`] = `
<button type="button"
        class="storybook-button storybook-button--small storybook-button--secondary"
        style
>
  Button
</button>
`;
